# cli-anything-godot

./: .gitattributes  .gitignore  NOTICE  README.md  pyproject.toml
cli_anything/godot/: README.md  USAGE.md  godot_cli.py
cli_anything/godot/addons/live_bridge/: dispatch.gd  nodeutil.gd  plugin.cfg  plugin.gd  server.gd  variants.gd
cli_anything/godot/commands/: config.py  gdscript.py  live.py  resources.py  scene_nodes.py  twod.py
cli_anything/godot/core/: configfile.py  export.py  gdscript_tools.py  nodes.py  output.py  resources.py  settings.py  signals.py  tscn.py  twod.py  variant_fmt.py
cli_anything/godot/skills/: SKILL.md
cli_anything/godot/tests/: conftest.py  test_config.py  test_foundation.py  test_full_e2e.py  test_gdscript.py  test_live_bridge.py  test_nodes.py  test_resources.py  test_twod.py
cli_anything/godot/utils/: godot_backend.py  live_client.py
docs/: CLAUDE.project-template.md  CONTRACT.md  SPEC-live-bridge.md  SPEC-offline-layer.md
